k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: hack-frontend
  labels:
    name: hack-frontend
