k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hack-frontend-svc
  namespace: hack-frontend
spec:
  selector:
    app: hack-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
